@@ -1,1 +1,0 @@
-bin/chardetect @PREFIX@/bin/chardetect-@PYVERSSUFFIX@
