@@ -1,3 +1,0 @@
-Character encoding auto-detection in Python.
-
-This package contains the last version supporting Python 2.
