@@ -1,27 +1,0 @@
-# $NetBSD: Makefile,v 1.3 2023/05/02 16:55:31 wiz Exp $
-
-DISTNAME=	chardet-4.0.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	converters python
-MASTER_SITES=	${MASTER_SITE_PYPI:=c/chardet/}
-
-MAINTAINER=	bartosz.kuzma@gmail.com
-HOMEPAGE=	https://pypi.python.org/pypi/chardet
-COMMENT=	Character encoding auto-detection in Python
-LICENSE=	gnu-lgpl-v2.1
-
-#TEST_DEPENDS+=	${PYPKGPREFIX}-test-runner-[0-9]*:../../devel/py-test-runner
-#TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis-[0-9]*:../../devel/py-hypothesis4
-#TEST_DEPENDS+=	${PYPKGPREFIX}-py-[0-9]*:../../devel/py-py
-
-PYTHON_VERSIONS_ACCEPTED=	27
-
-USE_PKG_RESOURCES=	yes
-
-post-install:
-	cd ${DESTDIR}${PREFIX}/bin && \
-	${MV} chardetect chardetect-${PYVERSSUFFIX} || ${TRUE}
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
