@@ -1,136 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/07/03 12:10:19 wiz Exp $
-bin/chardetect-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/chardet/__init__.py
-${PYSITELIB}/chardet/__init__.pyc
-${PYSITELIB}/chardet/__init__.pyo
-${PYSITELIB}/chardet/big5freq.py
-${PYSITELIB}/chardet/big5freq.pyc
-${PYSITELIB}/chardet/big5freq.pyo
-${PYSITELIB}/chardet/big5prober.py
-${PYSITELIB}/chardet/big5prober.pyc
-${PYSITELIB}/chardet/big5prober.pyo
-${PYSITELIB}/chardet/chardistribution.py
-${PYSITELIB}/chardet/chardistribution.pyc
-${PYSITELIB}/chardet/chardistribution.pyo
-${PYSITELIB}/chardet/charsetgroupprober.py
-${PYSITELIB}/chardet/charsetgroupprober.pyc
-${PYSITELIB}/chardet/charsetgroupprober.pyo
-${PYSITELIB}/chardet/charsetprober.py
-${PYSITELIB}/chardet/charsetprober.pyc
-${PYSITELIB}/chardet/charsetprober.pyo
-${PYSITELIB}/chardet/cli/__init__.py
-${PYSITELIB}/chardet/cli/__init__.pyc
-${PYSITELIB}/chardet/cli/__init__.pyo
-${PYSITELIB}/chardet/cli/chardetect.py
-${PYSITELIB}/chardet/cli/chardetect.pyc
-${PYSITELIB}/chardet/cli/chardetect.pyo
-${PYSITELIB}/chardet/codingstatemachine.py
-${PYSITELIB}/chardet/codingstatemachine.pyc
-${PYSITELIB}/chardet/codingstatemachine.pyo
-${PYSITELIB}/chardet/compat.py
-${PYSITELIB}/chardet/compat.pyc
-${PYSITELIB}/chardet/compat.pyo
-${PYSITELIB}/chardet/cp949prober.py
-${PYSITELIB}/chardet/cp949prober.pyc
-${PYSITELIB}/chardet/cp949prober.pyo
-${PYSITELIB}/chardet/enums.py
-${PYSITELIB}/chardet/enums.pyc
-${PYSITELIB}/chardet/enums.pyo
-${PYSITELIB}/chardet/escprober.py
-${PYSITELIB}/chardet/escprober.pyc
-${PYSITELIB}/chardet/escprober.pyo
-${PYSITELIB}/chardet/escsm.py
-${PYSITELIB}/chardet/escsm.pyc
-${PYSITELIB}/chardet/escsm.pyo
-${PYSITELIB}/chardet/eucjpprober.py
-${PYSITELIB}/chardet/eucjpprober.pyc
-${PYSITELIB}/chardet/eucjpprober.pyo
-${PYSITELIB}/chardet/euckrfreq.py
-${PYSITELIB}/chardet/euckrfreq.pyc
-${PYSITELIB}/chardet/euckrfreq.pyo
-${PYSITELIB}/chardet/euckrprober.py
-${PYSITELIB}/chardet/euckrprober.pyc
-${PYSITELIB}/chardet/euckrprober.pyo
-${PYSITELIB}/chardet/euctwfreq.py
-${PYSITELIB}/chardet/euctwfreq.pyc
-${PYSITELIB}/chardet/euctwfreq.pyo
-${PYSITELIB}/chardet/euctwprober.py
-${PYSITELIB}/chardet/euctwprober.pyc
-${PYSITELIB}/chardet/euctwprober.pyo
-${PYSITELIB}/chardet/gb2312freq.py
-${PYSITELIB}/chardet/gb2312freq.pyc
-${PYSITELIB}/chardet/gb2312freq.pyo
-${PYSITELIB}/chardet/gb2312prober.py
-${PYSITELIB}/chardet/gb2312prober.pyc
-${PYSITELIB}/chardet/gb2312prober.pyo
-${PYSITELIB}/chardet/hebrewprober.py
-${PYSITELIB}/chardet/hebrewprober.pyc
-${PYSITELIB}/chardet/hebrewprober.pyo
-${PYSITELIB}/chardet/jisfreq.py
-${PYSITELIB}/chardet/jisfreq.pyc
-${PYSITELIB}/chardet/jisfreq.pyo
-${PYSITELIB}/chardet/jpcntx.py
-${PYSITELIB}/chardet/jpcntx.pyc
-${PYSITELIB}/chardet/jpcntx.pyo
-${PYSITELIB}/chardet/langbulgarianmodel.py
-${PYSITELIB}/chardet/langbulgarianmodel.pyc
-${PYSITELIB}/chardet/langbulgarianmodel.pyo
-${PYSITELIB}/chardet/langgreekmodel.py
-${PYSITELIB}/chardet/langgreekmodel.pyc
-${PYSITELIB}/chardet/langgreekmodel.pyo
-${PYSITELIB}/chardet/langhebrewmodel.py
-${PYSITELIB}/chardet/langhebrewmodel.pyc
-${PYSITELIB}/chardet/langhebrewmodel.pyo
-${PYSITELIB}/chardet/langhungarianmodel.py
-${PYSITELIB}/chardet/langhungarianmodel.pyc
-${PYSITELIB}/chardet/langhungarianmodel.pyo
-${PYSITELIB}/chardet/langrussianmodel.py
-${PYSITELIB}/chardet/langrussianmodel.pyc
-${PYSITELIB}/chardet/langrussianmodel.pyo
-${PYSITELIB}/chardet/langthaimodel.py
-${PYSITELIB}/chardet/langthaimodel.pyc
-${PYSITELIB}/chardet/langthaimodel.pyo
-${PYSITELIB}/chardet/langturkishmodel.py
-${PYSITELIB}/chardet/langturkishmodel.pyc
-${PYSITELIB}/chardet/langturkishmodel.pyo
-${PYSITELIB}/chardet/latin1prober.py
-${PYSITELIB}/chardet/latin1prober.pyc
-${PYSITELIB}/chardet/latin1prober.pyo
-${PYSITELIB}/chardet/mbcharsetprober.py
-${PYSITELIB}/chardet/mbcharsetprober.pyc
-${PYSITELIB}/chardet/mbcharsetprober.pyo
-${PYSITELIB}/chardet/mbcsgroupprober.py
-${PYSITELIB}/chardet/mbcsgroupprober.pyc
-${PYSITELIB}/chardet/mbcsgroupprober.pyo
-${PYSITELIB}/chardet/mbcssm.py
-${PYSITELIB}/chardet/mbcssm.pyc
-${PYSITELIB}/chardet/mbcssm.pyo
-${PYSITELIB}/chardet/metadata/__init__.py
-${PYSITELIB}/chardet/metadata/__init__.pyc
-${PYSITELIB}/chardet/metadata/__init__.pyo
-${PYSITELIB}/chardet/metadata/languages.py
-${PYSITELIB}/chardet/metadata/languages.pyc
-${PYSITELIB}/chardet/metadata/languages.pyo
-${PYSITELIB}/chardet/sbcharsetprober.py
-${PYSITELIB}/chardet/sbcharsetprober.pyc
-${PYSITELIB}/chardet/sbcharsetprober.pyo
-${PYSITELIB}/chardet/sbcsgroupprober.py
-${PYSITELIB}/chardet/sbcsgroupprober.pyc
-${PYSITELIB}/chardet/sbcsgroupprober.pyo
-${PYSITELIB}/chardet/sjisprober.py
-${PYSITELIB}/chardet/sjisprober.pyc
-${PYSITELIB}/chardet/sjisprober.pyo
-${PYSITELIB}/chardet/universaldetector.py
-${PYSITELIB}/chardet/universaldetector.pyc
-${PYSITELIB}/chardet/universaldetector.pyo
-${PYSITELIB}/chardet/utf8prober.py
-${PYSITELIB}/chardet/utf8prober.pyc
-${PYSITELIB}/chardet/utf8prober.pyo
-${PYSITELIB}/chardet/version.py
-${PYSITELIB}/chardet/version.pyc
-${PYSITELIB}/chardet/version.pyo
