@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/07/03 12:10:19 wiz Exp $
-
-BLAKE2s (chardet-4.0.0.tar.gz) = 0d2dbdc34b5f86de8a94091931d4cb576e2d4ed7c6b1ac46276b7502ac2f5666
-SHA512 (chardet-4.0.0.tar.gz) = ebd7f420e1094445270db993f6373ffe7370419e002b0bb13299dc6c9b0f7c4e77b0f44f871fba6371e6869e7c86728514367db377e3137487a3acf50cb81e96
-Size (chardet-4.0.0.tar.gz) = 1907771 bytes
