@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.22879 2023/05/02 16:30:31 wiz Exp $
+$NetBSD: TODO,v 1.22880 2023/05/02 17:24:30 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1214,7 +1214,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-fecon235-6.18.1203
 	o py-filebytes-0.10.2
 	o py-gammu-3.1
-	o py-gcovr-4.2
+	o py-gcovr-6.0
 	o py-gsutil-5.6
 	o py-hgview-1.9.0
 	o py-hyperscan-0.2.0
