@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.2714 2023/05/02 17:04:52 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.2715 2023/05/02 17:24:30 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -3809,3 +3809,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated mail/py-postfix-mta-sts-resolver to 1.3.0 [wiz 2023-05-02]
 	Updated misc/khard to 0.18.0 [wiz 2023-05-02]
 	Removed devel/py-mccabe06 [wiz 2023-05-02]
+	Removed converters/py-chardet4 [wiz 2023-05-02]
